# spinergy

./: Cargo.toml  Readme.md
src/: error.rs  event_emitter.rs  lib.rs
src/data/: frames.toml
src/spinner/: alignment.rs  builtins.rs  channel.rs  event.rs  message.rs  mod.rs  state.rs  stream.rs
