[package]
name = "spinergy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
crossbeam = "0.8.2"
lazy_static = "1.4.0"
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.24", features = ["derive"] }
term_size = "0.3.2"
toml = "0.7.3"
unicode-width = "0.1.10"
